--- a/server/src/main/resources/db/changelog/db.changelof-master.yaml
+++ b/server/src/main/resources/db/changelog/db.changelof-master.yaml
@@ -1,4 +1,7 @@
 databaseChangeLog:
   - include:
-      file:
+      file: init-ddl.sql
+      relativeToChangelogFile: true
+  - include:
+      file: 
       relativeToChangelogFile: true
