--- a/server/pom.xml
+++ b/server/pom.xml
@@ -55,7 +55,10 @@
             <artifactId>liquibase-core</artifactId>
             <version>4.30.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
